--- a/settings/project.json
+++ b/settings/project.json
@@ -43,13 +43,13 @@
     "bullet",
     "player"
   ],
-  "last-module-event-record-time": 0,
+  "last-module-event-record-time": 1701438611051,
   "simulator-orientation": false,
   "simulator-resolution": {
     "height": 640,
     "width": 960
   },
+  "start-scene": "current",
   "use-customize-simulator": true,
-  "use-project-simulator-setting": false,
-  "start-scene": "current"
+  "use-project-simulator-setting": false
 }
